<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingLeft="16dp"
    android:paddingTop="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/info"
        android:textSize="20sp"
       />

    <EditText
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/patient_name"
        />

    <EditText
        android:id="@+id/date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="date"
        android:hint="@string/date"
        />

    <EditText
        android:id="@+id/condition"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:hint="@string/condition"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="onClickSubmit"
        />

</LinearLayout>

